# non-b-gfa-jess355

./: .gitignore  README.md  pyproject.toml
docs/: python-package.md
src/non_b_gfa/: __init__.py  cli.py  defaults.py  detectors.py  fasta.py  models.py  runner.py  writers.py
tests/: test_cli.py  test_fasta.py  test_regression.py
